--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body{
     margin: 0;
-    background-color: #0c0229;
     font-family: sans-serif;
 }
 nav{
     display: flex;
     justify-content: end;
     align-items: center;
-    background-color: #00f;
+    background-color: #bbb;
     min-height: 58px;
     position: fixed;
     width: 100%;
@@ -21,14 +20,13 @@ nav ul{
     list-style-type: none;
 }
 nav a{
-    color: #ccc;
     text-decoration: none;
     padding: 20px 40px;
     font-weight: bold;
 }
 nav a:hover{
     cursor: pointer;
-    background-color: #000;
+    background-color: #999;
 }
 .burger{
     display: none;
@@ -40,7 +38,7 @@ nav a:hover{
     width: 25px;
     height: 3px;
     margin: 5px;
-    background-color: #ccc;
+    background-color: #000;
 }
 @media screen and (max-width:770px){
     body{
@@ -51,12 +49,11 @@ nav a:hover{
         right: 0px;
         top: 58px;
         height: 90vh;
-        background-color: #00f;
+        background-color: #bbb;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        /*opacity: 100%;*/
         width: 50%;
         transform: translateX(100%);
         margin: 0;
@@ -91,6 +88,9 @@ nav a:hover{
 .toggle .bot{
     transform: rotate(45deg) translate(-5px, -6px);
 }
+p {
+    text-align: justify;
+}
 main{
     position: relative;
     top: 60px;
@@ -98,5 +98,110 @@ main{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    width: 70%;
+    margin: 0 auto;
+}
+.section-title{
+    color: #444;
+}
+#courses{
+    width: 100%;
+}
+.courses-container{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+}
+.courses-list{
+    min-width: 160px;
+}
+.courses-list ul{
+    padding: 0px;
+}
+.courses-list ul li{
+    list-style-type: none;
+    padding: 10px 5px;
+}
+.courses-list ul li:hover{
+    cursor: pointer;
+    background-color: #ddd;
+}
+.btn-active{
+    background-color: #bbb;
+}
+.course-content{
+    padding-left: 20px;
+    text-align: justify;
+}
+.custom-list{
+    column-count: 2;
+    font-size: 12px;
+    color: #444;
+    line-height: 20px;
+}
+@media screen and (max-width:650px){
+    main{
+        width: 90%;
+    }
+    .courses-container{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+    .courses-list{
+        width: 100%;
+    }
+    .courses-list ul{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .courses-li ul li{
+        flex: 1;
+    }
+}
+.codecademy, .near{
+    display: none;
+}
+.course-description-inactive{
+    display: none;
+}
+.course-description-active{
+    display: block;
+}
+.projects-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.project-card{
+    width: 300px;
+    height: 300px;
+    background-color: #888;
+    color: #fff;
+    border-radius: 30px;
+    margin: 10px;
+    padding: 20px;
+}
+.project-card:hover{
+    cursor: pointer;
+    transform: translateY(-10px);
+    transition: transform 0.3s ease-in;
+}
+.project-card i{
+    float: right;
+    color: #000;
+}
+.project-card i:hover{
     color: #ccc;
+}
+.project-card ul{
+    padding-left: 10px;
+}
+.project-card ul li {
+    padding-top: 5px;
+}
+.bot-link{
+    font-size: 2em;
+    padding: 50px;
 }
