--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-color: #444;
+    --project-card-color: #777;
+}
 body{
     margin: 0;
     font-family: sans-serif;
@@ -12,7 +16,7 @@ nav{
     width: 100%;
     top: 0;
     transition: top 0.2s;
-    opacity: 60%;
+    opacity: 80%;
     z-index: 1;
 }
 nav ul{
@@ -98,11 +102,11 @@ main{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 .section-title{
-    color: #444;
+    color: var(--primary-color);
 }
 #courses{
     width: 100%;
@@ -114,6 +118,7 @@ main{
 }
 .courses-list{
     min-width: 160px;
+    font-weight: bold;
 }
 .courses-list ul{
     padding: 0px;
@@ -175,13 +180,14 @@ main{
     flex-wrap: wrap;
 }
 .project-card{
-    width: 300px;
+    width: 280px;
     height: 300px;
-    background-color: #888;
+    background-color: var(--project-card-color);
     color: #fff;
     border-radius: 30px;
     margin: 10px;
     padding: 20px;
+    font-size: 14px;
 }
 .project-card:hover{
     cursor: pointer;
@@ -191,15 +197,15 @@ main{
 .project-card i{
     float: right;
     color: #000;
+    margin-left: 10px;
 }
 .project-card i:hover{
     color: #ccc;
 }
-.project-card ul{
-    padding-left: 10px;
-}
-.project-card ul li {
-    padding-top: 5px;
+.card-list{
+    column-count: 2;
+    font-size: 12px;
+    line-height: 20px;
 }
 .bot-link{
     font-size: 2em;
