--- a/style.css
+++ b/style.css
@@ -170,16 +170,20 @@ main{
 }
 .section-title{
     color: var(--secondary-color);
-    font-size: 1.8em;
+    font-size: 3em;
+    margin: 100px 0px;
 }
 .course {
     position: relative;
     overflow: hidden;
-    width: 50%;
+    width: 100%;
+    max-width: 800px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px;
 }
+
 .course input {
     display: none;
 }
@@ -191,9 +195,12 @@ main{
     background-color: var(--secondary-color);
     color: #fff;
     border-radius: 20px;
-    padding: 10px 20px;
+    padding: 5px 20px;
     margin-bottom: 20px;
     font-size: 1.5em;
+}
+.course label:hover {
+    cursor: pointer;
 }
 .plus div{
     width: 25px;
@@ -238,8 +245,8 @@ main{
     opacity: 1;
     top: 0;
 }
-.course input:checked ~ label.plus.vert {
-    background-color: red;
+.course input:checked ~ label .plus .vert {
+    opacity: 0;
 }
 
 /* Projects section */
