--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
     width: 100%;
     top: 0;
     transition: top 0.2s;
-    opacity: 95%;
+    /*opacity: 95%;*/
     z-index: 3;
 }
 nav img{
@@ -138,6 +138,7 @@ main{
     align-items: center;
     justify-content: center;
     color: var(--dark-grey-color);
+    z-index: -2;
 }
 #home img {
     width: 30vw;
@@ -310,7 +311,7 @@ main{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    justify-content: space-around;
     opacity: 0;
     padding: 20px;
     box-sizing: border-box;
